fix alignment and button

--- a/rehearsal-room-frontend/src/components/Spaces/Spaces.scss
+++ b/rehearsal-room-frontend/src/components/Spaces/Spaces.scss
@@ -1,6 +1,5 @@
 //small change
-// .sl-wrapper { 
-.space-article { 
+.space_list { 
   padding: 2rem;
   display: flex;
   justify-content: space-between;
@@ -15,9 +14,14 @@
   padding: 2px;
   margin-top: 10px;
   margin-bottom: 5px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+}
+
+.sl-wrapper:nth-last-child(2){
+  margin: auto;
+}
+
+.sl-wrapper:last-of-type{
+  margin: auto;
 }
 
 .sl-title {
@@ -31,17 +35,17 @@
 
 
 .sl-pricebox {
-  margin-left: 6em;
+  float: right;
 }
 
 .sl-price {
   transform: translateY(-70%);
   background-color: white;
-  border: 4px solid whitesmoke;
+  border: 3px solid whitesmoke;
   border-radius: 2px;
   box-shadow: 5px solid rgba(245, 245, 245, 0.685);
   font-size: 140%;
-  margin: 0 2em 0 7em;
+  margin-right: 1em;
   padding: 7px;
   
 }
